--- a/hugo.toml
+++ b/hugo.toml
@@ -22,7 +22,7 @@ defaultContentLanguageInSubdir = false
 
 [author]
 name = "Maximiliano Cabañas"
-image = "images/mine/MaxiPoroto.jpg"
+image = "images/portrait.jpeg"
 headline = "Game Programmer"
 bio = "A little bit about you"
 # links = [
