--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -21,6 +21,11 @@ name = "Projects"
 pageRef = "/projects"
 weight = 4
 
+[[main]]
+name = "Cover Letter"
+pageRef = "/cover-letters"
+weight = 5
+
 # [[main]]
 # weight = 5
 # name = "Pages"
