--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -1,10 +1,10 @@
 ############# English navigation ##############
 
 # main menu
-[[main]]
-name = "Home"
-pageRef = "/"
-weight = 1
+# [[main]]
+# name = "Home"
+# pageRef = "/"
+# weight = 1
 
 # [[main]]
 # name = "About"
@@ -16,15 +16,15 @@ weight = 1
 # pageRef = "/elements"
 # weight = 3
 
-[[main]]
-name = "Projects"
-pageRef = "/projects"
-weight = 4
+# [[main]]
+# name = "Projects"
+# pageRef = "/projects"
+# weight = 4
 
-[[main]]
-name = "Cover Letter"
-pageRef = "/cover-letters"
-weight = 5
+# [[main]]
+# name = "Cover Letter"
+# pageRef = "/cover-letters"
+# weight = 5
 
 # [[main]]
 # weight = 5
@@ -57,15 +57,15 @@ weight = 5
 
 
 # footer menu
-[[footer]]
-name = "About"
-pageRef = "/about"
-weight = 1
+# [[footer]]
+# name = "About"
+# pageRef = "/about"
+# weight = 1
 
-[[footer]]
-name = "Elements"
-pageRef = "/elements"
-weight = 2
+# [[footer]]
+# name = "Elements"
+# pageRef = "/elements"
+# weight = 2
 
 # [[footer]]
 # name = "Privacy Policy"
